<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="sign_in_failed">There was an issue with sign in, please try again later.</string>
    <string name="app_name">Word Search Brain</string>
    <string name="title_activity_results">Results</string>
    <string name="title_activity_menu">menu</string>
    <string name="menu_easy">Easy</string>
    <string name="menu_medium">Medium</string>
    <string name="menu_hard">Hard</string>
    <string name="menu_advanced">Advanced</string>
    <string name="sign_in">Sign in with G+</string>
    <string name="results_return_menu">Return to Menu</string>
    <string name="results_replay">Play Again</string>
    <string name="ad_app_id">ca-app-pub-6308034132891583~5611757550</string>
    <string name="reward_ad_id"> ca-app-pub-6308034132891583/3541961553</string>

    <string name="inter_ad_id">ca-app-pub-6308034132891583/1818856357</string>
    <string name="ad_unit_id">ca-app-pub-6308034132891583/2379089556</string>
    <!-- Google Play -->
    <string name="app_id">390568743085</string>
    <string name="leaderboard_highest_scores__easy">CgkIraHY_a4LEAIQAQ</string>
    <string name="leaderboard_highest_scores__medium">CgkIraHY_a4LEAIQAg</string>
    <string name="leaderboard_highest_scores__hard">CgkIraHY_a4LEAIQAw</string>
    <string name="beginner_achievement">CgkIraHY_a4LEAIQBA</string>
    <string name="intermediate_achievement">CgkIraHY_a4LEAIQBQ</string>
    <string name="experienced_achievement">CgkIraHY_a4LEAIQBg</string>
    <string name="specialist_achievement">CgkIraHY_a4LEAIQBw</string>
    <string name="expert_achievement">CgkIraHY_a4LEAIQCA</string>
    <!--<string name="leaderboard_highest_scores__advanced">CggI9KDylmgQAhAE</string>-->

    <!-- Google Analytics -->
    <string name="ga_menu_screen">Main Menu</string>
    <string name="ga_gameplay_screen">Gameplay</string>
    <string name="ga_results_screen">Results</string>

    <string name="ga_click_easy">Click Easy</string>
    <string name="ga_click_medium">Click Medium</string>
    <string name="ga_click_hard">Click Hard</string>
    <string name="ga_click_pause">Click Pause</string>
    <string name="ga_click_skip">Click Skip</string>
    <string name="ga_click_leaderboard">Click Leaderboard</string>
    <string name="ga_click_achievement">Click Achievement</string>
    <string name="ga_click_replay">Click Play Again</string>
    <string name="ga_click_return_to_menu">Click Return to Menu</string>

</resources>
