<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/result_back_pos">

    <!--<chrisjluc.onesearch.ui.components.GameBoldTextView
        android:layout_centerHorizontal="true"
        android:padding="@dimen/results_title_padding"
        android:textSize="36sp"
        android:text="RESULTS"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:textColor="@color/white"
        android:background="@drawable/grid_word_found_highlight"
        android:layout_width="150dp"
        android:layout_height="wrap_content" />-->
    <com.google.android.gms.ads.AdView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/ad_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        app:adSize="BANNER"
        app:adUnitId="@string/ad_unit_id" />

    <LinearLayout
        android:id="@+id/title_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/result_mid" />

    </LinearLayout>

    <chrisjluc.onesearch.ui.components.GameBoldTextView
        android:id="@+id/tvBestScoreResultNotify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llScoreResult"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="New Best Score!"
        android:textColor="@color/red"
        android:textSize="32sp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/llScoreResult"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@drawable/result_board"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="64dp"
            android:gravity="center"
            android:orientation="vertical">

            <chrisjluc.onesearch.ui.components.GameTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="Score"
                android:textColor="@color/blue"
                android:textSize="24sp" />

            <chrisjluc.onesearch.ui.components.GameBoldTextView
                android:id="@+id/tvScoreResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="Score"
                android:textColor="@color/blue"
                android:textSize="32sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <chrisjluc.onesearch.ui.components.GameTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="Best Score"
                android:textColor="@color/blue"
                android:textSize="24sp" />

            <chrisjluc.onesearch.ui.components.GameBoldTextView
                android:id="@+id/tvBestScoreResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="Score"
                android:textColor="@color/blue"
                android:textSize="32sp" />

        </LinearLayout>

    </LinearLayout>


    <com.google.android.gms.common.SignInButton
        android:id="@+id/bResultSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/llScoreResult"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

    <ImageButton
        android:id="@+id/bShowLeaderBoards"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@id/llScoreResult"
        android:layout_marginLeft="64dp"
        android:background="@drawable/trophy"
        android:text="Leaderboard" />

    <ImageButton
        android:id="@+id/bShowAchievements"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/llScoreResult"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="64dp"
        android:background="@drawable/achievement"
        android:text="Achievements" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bShowAchievements"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:weightSum="1">

        <ImageButton
            android:id="@+id/bReplay"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="44dp"
            android:background="@drawable/restart"
            android:text="@string/results_replay" />

        <ImageButton
            android:id="@+id/bReturnMenu"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="44dp"
            android:background="@drawable/exit"
            android:text="@string/results_return_menu" />

    </RelativeLayout>

</RelativeLayout>
